implement source compatibility to java 11